# skill

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOOKS.md  LLM.md  PLAN.md  README.md  SKILL.md  TODO.md  WINDOWS.md  biome.json  cli.ts  deny.toml  dry-run-release-notes.md  implementation-backlog.md  package-lock.json  package.json  rust_out  rustfmt.toml  smoke-test.sh  test.ts  vite.config.js  windows ci release log.txt
crates/skill-commands/: Cargo.toml
crates/skill-commands/src/: graph.rs  lib.rs
crates/skill-commands/src/graph/: dot.rs  mod.rs  svg.rs  svg_3d.rs  tests.rs
crates/skill-daemon/: Cargo.toml  README.md
crates/skill-daemon-routes/: Cargo.toml
crates/skill-daemon-routes/src/: lib.rs
crates/skill-daemon-state/: Cargo.toml
crates/skill-daemon-state/src/: auth.rs  lib.rs  reconnect_state.rs  session_handle.rs  state.rs  text_embedder.rs  tracker.rs  util.rs
crates/skill-daemon/.cargo/: config.toml
crates/skill-daemon/src/: activity.rs  auth.rs  auth_middleware.rs  background.rs  cmd_dispatch.rs  handlers.rs  idle_reembed.rs  lib.rs  main.rs  reconnect.rs  scanner.rs  service_installer.rs  session_runner.rs  state.rs  tracker.rs  util.rs
crates/skill-daemon/src/embed/: mod.rs  (+3 more)
crates/skill-data/: Cargo.toml  README.md
crates/skill-data/src/: activity_store.rs  device.rs  dnd.rs  error.rs  gpu_stats.rs  health_store.rs  hooks_log.rs  label_store.rs  lib.rs  oura_sync.rs  ppg_analysis.rs  screenshot_store.rs  session_csv.rs  session_parquet.rs  session_paths.rs  session_writer.rs  util.rs
crates/skill-data/tests/: session_csv_roundtrip_tests.rs  session_parquet_tests.rs
crates/skill-devices/: Cargo.toml  README.md
crates/skill-devices/src/: lib.rs
crates/skill-eeg/: Cargo.toml
crates/skill-eeg/benches/: dsp_bench.rs
crates/skill-eeg/src/: artifact_detection.rs  band_metrics.rs  constants.rs  eeg_bands.rs  eeg_filter.rs  eeg_model_config.rs  eeg_quality.rs  head_pose.rs  lib.rs
crates/skill-eeg/tests/: dsp_pipeline_test.rs
crates/skill-exg/: Cargo.toml
crates/skill-exg/src/: lib.rs
crates/skill-gpu/: Cargo.toml  README.md
crates/skill-gpu/src/: lib.rs  stats.rs
crates/skill-headless/: Cargo.toml  README.md
crates/skill-headless/examples/: advanced.rs  smoke.rs
crates/skill-headless/src/: engine.rs  intercept.rs  lib.rs
crates/skill-headless/tests/: intercept_tests.rs
crates/skill-health/: Cargo.toml
crates/skill-health/src/: store.rs
crates/skill-history/: Cargo.toml
crates/skill-history/src/: cache.rs  lib.rs  local_days.rs  metrics.rs
crates/skill-history/tests/: e2e_test.rs  session_listing_prefix_tests.rs  session_paths_tests.rs
crates/skill-iroh/: Cargo.toml
crates/skill-iroh/src/: auth.rs  commands.rs  device_proto.rs  device_receiver.rs  lib.rs  tests.rs  tunnel.rs
crates/skill-jobs/: Cargo.toml
crates/skill-jobs/src/: lib.rs
crates/skill-jobs/tests/: queue_tests.rs
crates/skill-label-index/: Cargo.toml
crates/skill-label-index/src/: lib.rs
crates/skill-label-index/tests/: daemon_hnsw_loop_test.rs
crates/skill-llm/: Cargo.toml  README.md
crates/skill-llm/src/: catalog.rs  chat_store.rs  config.rs  engine.rs  handlers.rs  log.rs
crates/skill-llm/tests/: llm_e2e.rs
crates/skill-location/: Cargo.toml  README.md  build.rs
crates/skill-location/src/: ip_fallback.rs  ip_fallback_stub.rs  lib.rs  macos.rs  skill_location_macos.m  types.rs
crates/skill-lsl/: Cargo.toml
crates/skill-lsl/src/: iroh_lsl_adapter.rs  lib.rs  lsl_adapter.rs  tests.rs  virtual_source.rs
crates/skill-lsl/tests/: loopback_test.rs  lsl_e2e.rs  resolve_test.rs
crates/skill-oura/: Cargo.toml  README.md
crates/skill-oura/src/: lib.rs
crates/skill-router/: Cargo.toml
crates/skill-router/src/: lib.rs
crates/skill-screenshots/: Cargo.toml
crates/skill-screenshots/src/: capture.rs  chat_image.rs  config.rs  context.rs  lib.rs  platform.rs
crates/skill-screenshots/tests/: context_tests.rs  metrics_tests.rs
crates/skill-settings/: Cargo.toml  README.md
crates/skill-settings/src/: keychain.rs  lib.rs  screenshot_config.rs  tests.rs
crates/skill-settings/tests/: settings_api_tests.rs
crates/skill-skills/: Cargo.toml
crates/skill-skills/src/: lib.rs  sync.rs
crates/skill-skills/tests/: sync_tests.rs
crates/skill-tools/: Cargo.toml
crates/skill-tools/src/: context.rs  defs.rs  exec.rs  lib.rs  log.rs  parse.rs  search.rs  types.rs  web_cache.rs
crates/skill-tray/: Cargo.toml
crates/skill-tray/src/: lib.rs
crates/skill-tts/: Cargo.toml
crates/skill-tts/src/: config.rs  kitten.rs  lib.rs  log.rs  neutts.rs
crates/skill-vision/: Cargo.toml  README.md  build.rs
crates/skill-vision/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  exg_catalog.json  llm_catalog.json  manifest.xml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/resources/: com.neuroskill.skill-daemon.plist
src-tauri/resources/neutts-samples/: dave.npy  greta.npy  jo.npy  juliette.npy  mateo.npy
src-tauri/src/: about.rs  active_window.rs  api.rs  artifact_detection.rs  background.rs  ble_scanner.rs  calibration_service.rs  commands.rs  constants.rs  daemon_cmds.rs  device_scanner.rs  dnd.rs  eeg_bands.rs  eeg_embeddings.rs  eeg_filter.rs  eeg_model_config.rs  eeg_quality.rs  external_renderer.rs  global_eeg_index.rs  gpu_stats.rs  head_pose.rs  helpers.rs  history_cmds.rs  job_queue.rs  label_cmds.rs  lib.rs  lifecycle.rs  llm.rs  main.rs  muse_session.rs  mw75_session.rs  openbci_session.rs  platform.rs  ppg_analysis.rs  quit.rs  screenshot.rs  screenshot_store.rs  session_analysis.rs  session_connect.rs  session_csv.rs  (+12 more)
src-tauri/src/eeg_embeddings/: day_store.rs  mod.rs  worker.rs
src-tauri/src/llm/: catalog.rs  chat_store.rs  cmds.rs  mod.rs  tools.rs
src-tauri/src/settings_cmds/: activity_cmds.rs  device_cmds.rs  dnd_cmds.rs  hook_cmds.rs  location_cmds.rs  lsl_cmds.rs  mod.rs  screenshot_cmds.rs  skills_cmds.rs
src-tauri/src/tts/: kitten.rs  mod.rs  neutts.rs
src-tauri/src/ws_commands/: dnd_sleep.rs  llm_cmds.rs  mod.rs  oura.rs  screenshots.rs  search.rs
(+712 files in other folders)
