# ── Cargo Workspace ────────────────────────────────────────────────────────────
#
# All Rust crates are members of a single workspace so they share one target
# directory (src-tauri/target/).  This avoids multi-GB duplication that occurs
# when crates under crates/ are built independently (each getting its own
# target/ with duplicate copies of every transitive dependency).
#
# The shared target directory is configured via .cargo/config.toml:
#   [build]
#   target-dir = "src-tauri/target"
#
# This keeps the binary output where the Tauri CLI and build scripts expect it.

[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/skill-autostart",
    "crates/skill-commands",
    "crates/skill-constants",
    "crates/skill-data",
    "crates/skill-devices",
    "crates/skill-eeg",
    "crates/skill-exg",
    "crates/skill-headless",
    "crates/skill-health",
    "crates/skill-gpu",
    "crates/skill-history",
    "crates/skill-jobs",
    "crates/skill-label-index",
    "crates/skill-llm",
    "crates/skill-router",
    "crates/skill-screenshots",
    "crates/skill-settings",
    "crates/skill-skills",
    "crates/skill-tools",
    "crates/skill-tray",
    "crates/skill-tts",
    "crates/skill-vision",
]

# ── Patch: Apple-Silicon Metal fix for cubek-matmul ───────────────────────────
#
# cubek-matmul 0.1.1 panics on Apple Silicon when the SimpleCyclicCmma tile
# (40 KB) exceeds Metal's 32 KB shared-memory limit.  The patched fork extends
# the 'auto' fallback chain:  SimpleCyclicCmma → SimpleUnit → Naive.
#
# btleplug: improved macOS BLE scanning behaviour.
#
# [patch] sections MUST live in the workspace root — they are NOT inherited
# from member Cargo.toml files.

[patch.crates-io]
cubek-matmul    = { git = "https://github.com/eugenehp/cubek.git", branch = "cubek-matmul", package = "cubek-matmul" }
btleplug        = { git = "https://github.com/eugenehp/btleplug.git", branch = "imrpoved_mac_version" }

# ── kittentts / neutts pre-release patches ───────────────────────────────────
# Uncomment to test local changes before publishing kittentts 0.2.8 / neutts 0.0.8.
# Remove once those versions land on crates.io.
# kittentts = { path = "kittentts-rs" }
# neutts    = { path = "neutts-rs" }

# ── Workspace dependencies ─────────────────────────────────────────────────────
#
# Shared across multiple crates to ensure a single version + feature set.

[workspace.dependencies]
anyhow = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Workspace lints ────────────────────────────────────────────────────────────
#
# Consistent lint policy across every crate.  Individual crates inherit these
# via `[lints] workspace = true` in their own Cargo.toml.
#
# We warn (not deny) so CI stays green while we migrate, but clippy will flag
# every new `unwrap()` / missing safety doc / needless pass-by-value.

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
unwrap_used            = "warn"
# expect_used — downgraded: thread::spawn().expect(), NonZero::new(1).expect(),
# and Tauri app builder .expect() are idiomatic and unrecoverable. The lint
# catches ~50 legitimate uses vs ~0 bugs.  Use `lock_or_recover()` for Mutex.
# expect_used          = "warn"
panic                  = "warn"
undocumented_unsafe_blocks = "warn"
# needless_pass_by_value — disabled: Tauri #[command] handlers and actor-thread
# spawn sites require owned types; the lint produces ~280 false positives.
# needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else        = "warn"
semicolon_if_nothing_returned = "warn"

# ── Build profiles ────────────────────────────────────────────────────────────
#
# incremental = false (dev only)
#
# Rust's incremental compilation on macOS uses "thin archives" for rlibs.
# When a compilation unit inside candle-core produces a zero-length .o file
# (any module that is entirely cfg-gated away at the chosen feature set), the
# thin-archive builder tries to mmap it and panics:
#   "failed to map object file: memory map must have a non-zero length"
# Disabling incremental avoids the thin-archive code path entirely.
# Release builds are unaffected (they never use incremental by default).
# Tracked upstream: https://github.com/rust-lang/rust/issues/129443
[profile.dev]
incremental   = false
codegen-units = 1

# ── Release profile ──────────────────────────────────────────────────────────
#
# thin LTO gives ~90 % of full (fat) LTO's runtime performance benefit at a
# fraction of the link-time cost.  On Windows (the slowest CI platform) this
# shaves 2-5 min off release builds compared to the Cargo default (no LTO).
#
# codegen-units = 8 allows the backend to parallelise within each crate.
# Combined with thin LTO the final binary is only ~1-2 % larger than
# codegen-units = 1 + fat LTO, but compiles significantly faster.
# ── Test profile ──────────────────────────────────────────────────────────────
#
# llama-cpp-sys-4 wraps the llama.cpp C++ library.  Without optimisations,
# CPU inference runs at a fraction of native speed, making the LLM E2E test
# painfully slow (~1-2 tok/s instead of 20+ tok/s).  Optimising just this
# -sys crate (and its transitive C++ build) has no measurable impact on
# incremental test compile times since it is already built by cmake.
[profile.test.package.llama-cpp-sys-4]
opt-level = 3

[profile.test.package.llama-cpp-4]
opt-level = 3

[profile.release]
lto           = "thin"
codegen-units = 8
